--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
     "vendor-dir": "vendor"
   },
   "require": {
-    "php": ">=5.5.0"
-  },
-  "require-dev": {
+    "php": ">=5.5.0",
     "phpunit/phpunit": "~5.4",
     "phpmd/phpmd": "~2.4",
     "squizlabs/php_codesniffer": "~2.6"
